fix: adjust header nav links spacing

--- a/style.css
+++ b/style.css
@@ -100,6 +100,7 @@ header {
   display: flex;
   gap: 40px;
   margin-right: 30px;
+  margin-right: 25%;
 }
 
 .link-nav-a {
